# GIFTAPP

./: .gitignore  README.md  install_script.sh  pyproject.toml  requirements.txt
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BarcodeScanner.tsx  Pagination.tsx
frontend/src/components/auth/: RequireAuth.tsx
frontend/src/components/gift/: AddGiftSheet.tsx  SystemInfo.tsx
frontend/src/components/guest/: AddGuestSheet.tsx  AssingGuestModal.tsx  GuestDetailDialog.tsx
frontend/src/components/layout/: MainLayout.tsx  MobileNav.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: accordian-section.tsx  accordion.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  confirm-dialog.tsx  dialog.tsx  (+8 more)
frontend/src/config/: environment.ts  permissions.ts
frontend/src/contexts/: RoleContext.tsx
frontend/src/hooks/: use-mobile.tsx  usePrompt.ts  usePromptDialog.tsx
frontend/src/lib/: i18n.ts  statusColors.ts  tokenAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Notifications.tsx  Profile.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: event.ts  gift.ts  report.ts
gift/: api.py  api_v2.py  hooks.py  notifications.py  security.py  utils.py
gift/api/: __init__.py  dashboard.py  event.py  gift.py  reports.py
gift/fixtures/: print_format.json  role.json
gift/gift/: api.py  event_permissions.py
gift/public/frontend/: index.js  style.css
gift/www/: gift.html  index.py
(+75 files in other folders)
